ボタンの色変更

--- a/src/popup.html
+++ b/src/popup.html
@@ -22,10 +22,10 @@
       background-color: #45a049;
     }
     #copyButton {
-      background-color: #2196F3;
+      background-color: #709cd5;
     }
     #copyButton:hover {
-      background-color: #0b7dda;
+      background-color: #658bbc;
     }
     #status {
       margin-top: 10px;
